--- a/app/views/emails/contact.html
+++ b/app/views/emails/contact.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<bod>
-    Olá @name
-    <div>
-        @message
-    </div>
+<body>
+    Olá @name,
+    <p>Nome: @fromName</p>
+    <p>Email: @fromEmail</p>
+    <p>Telefone: @fromPhone</p>
+    <p>Mensagem: @fromMessage</p>
+
 </body>
 </html>
